@@ -124,6 +124,8 @@
                     <p>Cupidatat cillum burgdoggen beef, short ribs pork loin ground round alcatra ham hock salami esse fugiat irure. Buffalo meatball anim occaecat, brisket cupidatat tongue. Non pariatur sed frankfurter turducken ball tip. Cupidatat ea irure ball tip kevin in pastrami commodo. Flank beef et in labore shankle porchetta excepteur sunt non tongue boudin nulla ham. Sausage t-bone ham hock, laborum esse doner ut pork loin prosciutto kevin in pig bacon pork dolore. Labore chuck capicola, bacon commodo spare ribs ground round.</p>
                     <h2>Changelog</h2>
                     <ul>
+                        <li>links look better now</li>
+                        <li>better filler text is in order, I think</li>
                         <li>little demo text addition</li>
                         <li>prettify code</li>
                         <li>better wood textures for all</li>
