@@ -1,3 +1,5 @@
+- links look better now
+- better filler text is in order, I think
 - little demo text addition
 - prettify code
 - better wood textures for all
